bin_PROGRAMS = sars
sars_SOURCES = \
	adult-node.c \
	adult-node.h \
	baby-node.c \
	baby-node.h \
	bb2f.h \
	bb3f.h \
	clear-node.c \
	clear-node.h \
	digit-node.c \
	digit-node.h \
	game.c \
	gfx/gfx-adult.h \
	gfx/gfx-baby.h \
	gfx/gfx-eight.h \
	gfx/gfx-five.h \
	gfx/gfx-four.h \
	gfx/gfx-hungrycat.h \
	gfx/gfx-nine.h \
	gfx/gfx-one.h \
	gfx/gfx-seven.h \
	gfx/gfx-six.h \
	gfx/gfx-three.h \
	gfx/gfx-tv.h \
	gfx/gfx-two.h \
	gfx/gfx-virus.h \
	gfx/gfx-zero.h \
	glad.c \
	glad.h \
	hungrycat.c \
	hungrycat-node.c \
	hungrycat-node.h \
	KHR/khrplatform.h \
	m4f-3dx.h \
	m4f-bbx.h \
	m4f.h \
	macros.h \
	main.c \
	plasma-node.c \
	plasma-node.h \
	sars.c \
	sars.h \
	sfx.c \
	sfx.h \
	shader.c \
	shader.h \
	shader-node.c \
	shader-node.h \
	tex.c \
	tex.h \
	tex-node.c \
	tex-node.h \
	tv-node.c \
	tv-node.h \
	v2f.h \
	v3f.h \
	v4f.h \
	virus-node.c \
	virus-node.h

sars_CPPFLAGS = -I@top_srcdir@/libix2/src -I@top_srcdir@/libix2/libpad/src -I@top_srcdir@/libstage/src -I@top_srcdir@/libplay/src -ffast-math
sars_LDADD = @top_builddir@/libix2/src/libix2.a @top_builddir@/libix2/libpad/src/libpad.a @top_builddir@/libstage/src/libstage.a @top_builddir@/libplay/src/libplay.a -lm -ldl
