bin_PROGRAMS = sars
sars_SOURCES = \
	adult-maga-node.c \
	adult-maga-node.h \
	adult-masked-node.c \
	adult-masked-node.h \
	adult-node.c \
	adult-node.h \
	ansr-tex.c \
	ansr-tex.h \
	baby-hatted-node.c \
	baby-hatted-node.h \
	baby-node.c \
	baby-node.h \
	bb2f.h \
	bb3f.h \
	bonus-node.c \
	bonus-node.h \
	clear-node.c \
	clear-node.h \
	cp437.h \
	digit-node.c \
	digit-node.h \
	game.c \
	glad.c \
	glad.h \
	hungrycat.c \
	hungrycat-node.c \
	hungrycat-node.h \
	KHR/khrplatform.h \
	m4f-3dx.h \
	m4f-bbx.h \
	m4f.h \
	macros.h \
	main.c \
	maga-node.c \
	maga-node.h \
	mask-node.c \
	mask-node.h \
	plasma-node.c \
	plasma-node.h \
	sars.c \
	sars.h \
	sfx.c \
	sfx.h \
	shader.c \
	shader.h \
	shader-node.c \
	shader-node.h \
	teepee-node.c \
	teepee-node.h \
	tex.c \
	tex.h \
	tex-node.c \
	tex-node.h \
	tv-node.c \
	tv-node.h \
	v2f.h \
	v3f.h \
	v4f.h \
	virus-node.c \
	virus-node.h

sars_CPPFLAGS = -I@top_srcdir@/libansr/src -I@top_srcdir@/libix2/src -I@top_srcdir@/libix2/libpad/src -I@top_srcdir@/libstage/src -I@top_srcdir@/libplay/src -ffast-math
sars_LDADD = @top_builddir@/libansr/src/libansr.a @top_builddir@/libix2/src/libix2.a @top_builddir@/libix2/libpad/src/libpad.a @top_builddir@/libstage/src/libstage.a @top_builddir@/libplay/src/libplay.a -lm -ldl
